Update micrometer, slf4j, logback