@@ -64,7 +64,7 @@
         <jackson.version>2.13.3</jackson.version>
         <jersey.version>2.34</jersey.version>
         <junit.version>5.9.1</junit.version>
-        <micrometer.version>1.8.10</micrometer.version>
+        <micrometer.version>1.9.5</micrometer.version>
         <netcdf4.version>5.5.2</netcdf4.version>
         <netty.version>4.1.74.Final</netty.version>
         <lucene.version>9.4.1</lucene.version>
@@ -271,6 +271,7 @@
                         --add-opens java.base/java.text=ALL-UNNAMED
                         --add-opens java.base/java.time=ALL-UNNAMED
                         --add-opens java.base/java.time.zone=ALL-UNNAMED
+                        --add-opens java.base/java.time.format=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
                         --add-opens java.base/java.util.regex=ALL-UNNAMED
@@ -526,13 +527,13 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.11</version>
+            <version>1.4.4</version>
         </dependency>
         <!-- Jersey uses java.util logging, redirect it to slf4j API (we use the Logback implementation) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>1.7.36</version>
+            <version>2.0.3</version>
         </dependency>
 
         <!-- dependency injection -->
@@ -610,7 +611,7 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-jersey2</artifactId>
-            <version>${micrometer.version}</version>
+            <version>1.8.11</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
